name:                network-status
version:             0.1.0.0
synopsis:            Blah
description:         See README.rst
homepage:            https://github.com/sorki/network-status/
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2016 Richard Marko
--category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Status
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , network
                     , containers
                     , rtnetlink
                     , monad-control
                     , sockaddr
                     , stm
                     , data-default
                     , pretty-simple
                     , safe
  default-language:    Haskell2010
  ghc-options:         -Wall

executable network-status
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , async
                     , lifted-async
                     , stm
                     , network-status
  default-language:    Haskell2010

test-suite network-status-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       StatusSpec
                       SpecHelper
  build-depends:       base >= 4.7 && < 5
                     , network-status
                     , aeson
                     , hspec
                     , linux-namespaces
                     , unix
                     , process

source-repository head
  type:     git
  location: https://github.com/sorki/network-status.git
